# opencut-pyside-main

./: _sprint2_extracted.patch  _tmp.patch  implementation_plan.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
controllers/: app_controller.py  export_controller.py  project_controller.py  selection_controller.py  timeline_controller.py
docs/: project-structure.md
domain/: keyframe.py  media_asset.py  project.py  selection.py  track.py  transition.py  word_timing.py
dto/: export_dto.py
i18n/: opencut_en.ts  opencut_vi.ts
infrastructure/: crash_reporter.py  ffmpeg_gateway.py  ffmpeg_hwaccel.py  ffprobe_gateway.py  gpu_encoder.py  persistent_ffmpeg_reader.py  video_decoder.py
packaging/: README.md  opencut.spec
scripts/: build_windows.ps1
services/: async_media_loader.py  audio_playback_service.py  caption_service.py  export_service.py  keyframe_evaluator.py  lut_service.py  media_service.py  memory_guard.py  playback_service.py  project_service.py  settings_service.py  subtitle_extraction_service.py  subtitle_filters.py  subtitle_text_ops.py  thumbnail_service.py  transition_service.py  waveform_loader.py  waveform_service.py
tests/: test_async_filmstrip.py  test_async_media_loader.py  test_async_waveform_timeline.py  test_caption_service.py  test_extract_subtitle_dialog.py  test_ffmpeg_hwaccel.py  test_memory_guard.py  test_multi_reader_scrub_pool.py  test_persistent_ffmpeg_reader.py  test_playback_service.py  test_playback_service_memory_guard.py  test_project_service_text_clip.py  test_settings_service.py  test_sprint12_ffprobe.py  (+32 more)
(+301 files in other folders)
