[project]
name = "opencut-pyside"
version = "0.1.0"
description = "A PySide6 desktop video editor inspired by OpenCut / CapCut."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "opencut-pyside contributors" }]
dependencies = [
    "PySide6>=6.6",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]
# Cài cho tính năng "Trích xuất phụ đề từ video" trong panel Phụ đề.
# Yêu cầu Windows/Linux + NVIDIA GPU + CUDA/cuDNN tương thích với
# paddlepaddle-gpu 3.3.1. Người dùng cần copy thêm thư mục models V4
# (xem dialog "Trích xuất phụ đề" → nút "Chọn thư mục models...").
subtitle-extraction = [
    "paddlepaddle-gpu==3.3.1",
    "paddleocr",
    "opencv-python",
    "pysrt",
    "Levenshtein",
    "pyclipper",
    "shapely",
    "scikit-image",
]

[tool.ruff]
line-length = 120
target-version = "py310"
# Vendored upstream code is intentionally kept verbatim (see vendor/__init__.py).
extend-exclude = ["vendor"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "W",
    "B",
    "UP",
]
ignore = [
    "E501",  # very long f-strings in UI code are deliberate.
]

[tool.pytest.ini_options]
testpaths = ["tests"]
